# aduro-ai-demo

./: .env.example  .gitignore  README.md  demo.py  init_db.py  main.py  pyproject.toml  requirements.txt
aduro_agents/: __init__.py  cgm_collector.py  greeter_profiler.py  meal_planner.py  models.py  orchestrator.py  profile_updater.py  triage_agent.py
aduro_agents/utils/: database.py
agents/: __init__.py  cgm_collector.py  meal_planner.py  orchestrator.py  profile_updater.py
tests/: test_cgm_collector.py  test_greeter_profiler.py  test_meal_planner.py  test_profile_updater.py
