[project]
name = "aduro-ai-demo"
version = "0.1.0"
description = "Aduro AI Health Assistant Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.15",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "freezegun>=1.2.0",
    "pytest-freezegun>=0.4.2"
]
