[project]
name = "aduro-ai-demo"
version = "0.1.0"
description = "Aduro AI Health Assistant Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.15",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.8.0",
    "isort>=5.10.1",
    "mypy>=0.982",
    "ruff>=0.0.270",
    "pre-commit>=2.20.0",
    "ipython>=8.5.0",
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=0.18.0",
]

[project.scripts]
aduro-ai = "aduro_agents.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # PyFlakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "PLR2004",  # Magic value used in test files
    "S101",  # Use of assert in test files
    "PLR0913",  # Too many arguments in test functions
    "PLR0915",  # Too many statements in test functions
    "PLR0912"   # Too many branches in functions
]

